Project in progress!

--- a/WebIntelligence.html
+++ b/WebIntelligence.html
@@ -124,7 +124,7 @@
     
       <h1>Web<span>Intelligence</span></h1>
 
-      <a href="#">Get Started</a>
+      <a href="./Information/information.html">Get Started</a>
     </main>
   </section>
   
